fixed data overflow; fixed formula

--- a/src/App.css
+++ b/src/App.css
@@ -167,7 +167,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .data-overlay span:not(.data-total) {
   display: block;
-  padding: 0.3em 0;
+  padding: 0.5em;
 }
 
 .data-total {
@@ -312,6 +312,8 @@ input[type="number"]::-webkit-outer-spin-button {
 
   .data-overlay {
     font-size: 1rem;
+    padding: 0;
+    margin-bottom: 0.5em;
   }
 
   .background {
